[package]
name = "flowy-ot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecount = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}
derive_more = {version = "0.99", features = ["display"]}
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
lazy_static = "1.4.0"
strum = "0.21"
strum_macros = "0.21"
bytes = "1.0"



