[package]
name = "flowy-sys"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "1.0.0"
futures-core = { version = "0.3", default-features = false }
paste = "1"
futures-channel = "0.3.15"
futures = "0.3.15"
futures-util = "0.3.15"
bytes = "0.5"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
log = "0.4.14"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.9.4"
thread-id = "3.3.0"

#optional crate
allo-isolate = {version = "^0.1", features = ["catch-unwind",], optional = true}
byteorder = {version = "1.3.4", optional = true}
ffi-support = {version = "0.4.2", optional = true}

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.15"

[features]
dart_ffi = ["ffi-support", "allo-isolate", "byteorder"]