[package]
name = "flowy-workspace"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flowy-workspace-infra = { path = "../flowy-workspace-infra" }
flowy-document-infra = { path = "../flowy-document-infra" }
flowy-document = { path = "../flowy-document" }
flowy-dispatch = { path = "../lib-dispatch" }
flowy-derive = { path = "../flowy-derive" }
flowy-database = { path = "../flowy-database" }
flowy-sqlite = { path = "../lib-sqlite" }
flowy-infra = { path = "../lib-infra" }
flowy-dart-notify = { path = "../dart-notify" }
flowy-ot = { path = "../lib-ot" }
flowy-net = { path = "../flowy-net", features = ["flowy_request"] }
flowy-backend-api = { path = "../flowy-backend-api"}

parking_lot = "0.11"
protobuf = {version = "2.18.0"}
log = "0.4.14"
diesel = {version = "1.4.8", features = ["sqlite"]}
diesel_derives = {version = "1.4.1", features = ["sqlite"]}
#diesel = { git = "https://github.com/diesel-rs/diesel.git", branch = "master", features = ["sqlite"] }
#diesel_derives = { git = "https://github.com/diesel-rs/diesel.git", branch = "master",features = ["sqlite"] }
futures-core = { version = "0.3", default-features = false }
futures = "0.3.15"
pin-project = "1.0.0"
strum = "0.21"
strum_macros = "0.21"
tokio = { version = "1", features = ["rt"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
derive_more = {version = "0.99", features = ["display"]}
bincode = { version = "1.3"}
tracing = { version = "0.1", features = ["log"] }
bytes = { version = "1.0" }
crossbeam = "0.8.1"
crossbeam-utils = "0.8"
chrono = "0.4"

[dev-dependencies]
flowy-test = { path = "../flowy-test" }
serial_test = "0.5.1"

[features]
default = []
http_server = []