[package]
name = "flowy-client-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-ws = { path = "../lib-ws" }
lib-infra = { path = "../lib-infra" }
flowy-error-code = { path = "../flowy-error-code" }
futures-util = "0.3.15"
tokio = {version = "1", features = ["sync"]}
parking_lot = "0.12.1"
