[package]
name = "flowy-client-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-ws = { path = "../lib-ws" }
lib-infra = { path = "../lib-infra" }
futures-util = "0.3.26"
tokio = { version = "1.26", features = ["sync"]}
parking_lot = "0.12.1"
tracing = { version = "0.1", features = ["log"] }
thiserror = "1.0"
serde_repr = "0.1"
serde = "1.0"
