[package]
name = "flowy-derive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
name = "flowy_derive"

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
syn = { version = "1.0.109", features = ["extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
flowy-ast = { path = "../flowy-ast" }
lazy_static = {version = "1.4.0"}
dashmap = "5"
flowy-codegen = { path = "../flowy-codegen"}
serde_json = "1.0"
walkdir = "2.3.2"

[dev-dependencies]
tokio = { version = "1.26", features = ["full"] }
trybuild = "1.0.77"
log = "0.4.17"
