[package]
name = "flowy-error-code"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flowy-derive = { path = "../flowy-derive" }
protobuf = {version = "2.18.0"}
derive_more = {version = "0.99", features = ["display"]}

[build-dependencies]
flowy-codegen= { path = "../flowy-codegen", features = ["proto_gen"]}


[features]
dart = ["flowy-codegen/dart"]